--- a/Comercial.html
+++ b/Comercial.html
@@ -20,7 +20,7 @@
         
     <section style="text-align: center;">
       <div style="text-align: center;">
-         <a href="cotacoes.html"  style="font-family: Money; font-size: 3em; text-align: right;text-align: center;text-decoration: none;color: #594B02;font-size: 20em;" >W</a>
+         <a href="index.html"  style="font-family: Money; font-size: 3em; text-align: right;text-align: center;text-decoration: none;color: #594B02;font-size: 20em;" >W</a>
       </div>
        <div> 
          <table> 
