--- a/cotacoes.html
+++ b/cotacoes.html
@@ -86,8 +86,8 @@
            </table>
        
        </div>
-       <div style="height: 500px;">
-         <h1 style="position: relative;top:0px;margin-top: 0px;margin-bottom:100px;"><input type="button" value="G" id="atual" onclick="atualizar()"></h1>
+       <div>
+         <h1><input type="button" value="G" id="atual" onclick="atualizar()"></h1>
           </div>
        <div>
          <table>
