--- a/cotacoes.html
+++ b/cotacoes.html
@@ -86,7 +86,7 @@
            </table>
        
        </div>
-       <div>
+       <div style="padding-top: 100px; height: 290px;">
          <h1><input type="button" value="G" id="atual" onclick="atualizar()"></h1>
           </div>
        <div>
