--- a/Comercial.html
+++ b/Comercial.html
@@ -19,7 +19,7 @@
 
     <section style="text-align: center;">
       <div style="text-align: center;">
-         <a href="cotacoes.html"  style="font-family: Money; font-size: 3em; text-align: right;text-align: center;text-decoration: none;color: #594B02;font-size: 20em;margin-top: 0px;" >W</a>
+         <a href="index.html"  style="font-family: Money; font-size: 3em; text-align: right;text-align: center;text-decoration: none;color: #594B02;font-size: 20em;margin-top: 0px;" >W</a>
       </div>
        <div> 
          <table> 
@@ -88,7 +88,7 @@
        </div>
     </section>
    
-    <p style="font-family: Money; font-size: 3em; text-align: right;" >N</p>
+    <p>N</p>
     <script src="motor2.js"></script>
 </body>
 </html>
