--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <h1>Cotação $</h1>
         </header>
         <p>
-           <a href="Comercial.html" style="font-family: Money; font-size: 3em; text-decoration: none;color: #594B02;">l</a>
+           <a href="Comercial.html" style="font-family: Money; font-size: 3em; text-align: center;text-decoration: none;color: #594B02;">l</a>
          </p>
         
     <section>
@@ -149,7 +149,7 @@
        </div>
     </section>
    
-    <p style="font-family: Money; font-size: 3em;" >M</p>
+    <p style="font-family: Money; font-size: 3em; text-align: right;" >M</p>
     <script src="motor.js"></script>
 </body>
 </html>
