--- a/Comercial.html
+++ b/Comercial.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-        <h1 class=" ">Cotação Comercial $</h1>
+        <h1 class="titulo">Cotação Comercial $</h1>
 
     <section class="comercial">
       
