--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <tr>
                   <td style="color: #f3f0eb;">Moeda</td>
                   <td style="color: #f3f0eb;">Cotação</td>
-                  <td style="color: #f3f0eb;">C/ Desconto</td>
+                  <td class="desconto" style="color: #f3f0eb;">C/ Desconto</td>
                </tr>
                <tr>
                    <td>USD</td>
