--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             
             
               <tr>
-                  <td style="color: #f3f0eb;">Moeda</td>
-                  <td style="color: #f3f0eb;">Cotação</td>
+                  <td class="desconto" style="color: #f3f0eb;">Moeda</td>
+                  <td class="desconto" style="color: #f3f0eb;">Cotação</td>
                   <td class="desconto" style="color: #f3f0eb;">C/ Desconto</td>
                </tr>
                <tr>
