--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                   <tr>
                       <td>USD</td>
                       <td id="usdv1"> -</td>
+                      <td id="usdv3" class="none"><span></span> <i><img src="padlock.png" class="blockPrice" alt=""></i></td>
                       <td id="usdv2"> -</td>
                    </tr>
                    <tr>
@@ -146,6 +147,7 @@
        
     </section>
    
+
     <p style="font-family: Money; font-size: 3em; text-align: right;" >M</p>
     <script src="motor.js"></script>
 </body>
