--- a/index.html
+++ b/index.html
@@ -150,5 +150,12 @@
 
     <p style="font-family: Money; font-size: 3em; text-align: right;" >M</p>
     <script src="motor.js"></script>
+    <footer>
+       <div>Font made from 
+            <a href="http://www.onlinewebfonts.com" target="_blank">oNline Web Fonts</a>
+            is licensed by CC BY 3.0
+       </div>
+       <p>Denseolvido por Anderson Campos</p>
+    </footer>
 </body>
 </html>
