--- a/Comercial.html
+++ b/Comercial.html
@@ -91,6 +91,13 @@
     </section>
    
     <p style="font-family: Money; font-size: 3em;">N</p>
+    <footer>
+      <div>Font made from 
+           <a href="http://www.onlinewebfonts.com" target="_blank">oNline Web Fonts</a>
+           is licensed by CC BY 3.0
+      </div>
+      <p>Denseolvido por Anderson Campos</p>
+   </footer>
     <script src="motor2.js"></script>
 </body>
 </html>
