--- a/Comercial.html
+++ b/Comercial.html
@@ -96,7 +96,7 @@
            <a href="http://www.onlinewebfonts.com" target="_blank">oNline Web Fonts</a>
            is licensed by CC BY 3.0
       </div>
-      <p>Denseolvido por Anderson Campos</p>
+      <p>Desenvolvido por Anderson Campos</p>
    </footer>
     <script src="motor2.js"></script>
 </body>
